# urisys

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  TODO.priority.md  app.doql.less  goal.yaml  planfile.yaml  pyproject.toml
code2llm_output/: README.md  analysis.toon.yaml  context.md  evolution.toon.yaml  map.toon.yaml
data/: events.jsonl
docs/: ARCHITECTURE.md  CLI.md  CONFORMANCE.md  DATA-MODEL.md  DISTRIBUTION.md  ECOSYSTEM.md  EXAMPLES.md  FLOWS.md  MARKPACT-PROFILE.md  MARKPACT.md  MESH.md  MIGRATION-STEP1.md  MIGRATION-STEP2.md  MIGRATION-STEP3.md  NODE-SETUP.md  OFFICE-AUTOMATION.md  PACK-EXTENSIBILITY.md  PACKAGES.md  PROCESS-ARCHITECTURE.md  README.md  REFACTORING.md  REPOS.md  RESOLVER-SCHEMA.md  SECURITY.md
examples/: README.md
flows/: README.md  browser-form-vql.uri.flow.yaml  email-mailpit.uri.flow.yaml  office-simulate-tick.uri.flow.yaml  office-writer.uri.flow.yaml
local-lab/: docker-compose.yml  node-profile.local.yaml
markpacts/: README.md  packs
project/: MAP.md  PACKAGES.md  README.md  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
uribrowser-docker/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
uribrowser-docker/config/: browser-profile.json  browser-profile.real.json
uribrowser-docker/docs/: PORTABILITY.md
uribrowser-docker/flows/: browser-demo.uri.flow.yaml
uribrowser-docker/markpacts/: uribrowser-python.markpact.md  uribrowser.contract.markpact.md
uribrowser-docker/scripts/: test-local.sh  test-real.sh
uribrowser-docker/tests/: test_browser.py
urienv-docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
urienv-docker/docker/config/: env-policy.yaml
urienv-docker/docker/secrets/: markpact_token.txt  smtp_password.txt
urienv-docker/docs/: ENV_URI.md
urienv-docker/flows/: mutate-process-env.uri.flow.yaml  startup-env-check.uri.flow.yaml
urienv-docker/markpacts/: urienv-python.markpact.md  urienv.contract.markpact.md
urienv-docker/scripts/: local-test.sh  test-docker.sh
urienv-docker/tests/: e2e_env.py  test_urienv.py
urikvm-docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
urikvm-docker/config/: kvm-profile.json  kvm-profile.real.json
urikvm-docker/docs/: ARCHITECTURE.md  OCR_LLM.md  ROUTING.md  SAFETY.md
urikvm-docker/flows/: kvm-click-ok.uri.flow.yaml
urikvm-docker/markpacts/: urihim.contract.markpact.md  urikvm-python-mock.bundle.markpact.md  urikvm.contract.markpact.md  urillm-vision.contract.markpact.md  uriocr.contract.markpact.md
urikvm-docker/scripts/: call-http.sh  real_pipeline.py  test-local.sh  test-real.sh
urikvm-docker/tests/: test_him_driver.py  test_him_scroll.py  test_kvm.py  test_llm_plan.py  test_ocr_llm.py  test_office_mail.py  test_vision_dispatch.py
urirdp-docker/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.rdp-e2e.yml  docker-compose.yml  pyproject.toml
urirdp-docker/config/: env-policy.yaml  rdp-kvm-profile.json  rdp-kvm-profile.real.json
urirdp-docker/docker/: bootstrap-rdp-session.sh  entrypoint.sh  startwm.sh  supervisord.conf
urirdp-docker/docs/: ARCHITECTURE.md  KVM_AUTOMATION.md  MARKPACT.md  RDP_E2E.md  RDP_USAGE.md
urirdp-docker/flows/: rdp-kvm-smoke.uri.flow.yaml  real-rdp-click-text.uri.flow.yaml
urirdp-docker/markpacts/: urihim.contract.markpact.md  urikvm-rdp.contract.markpact.md  urikvm.contract.markpact.md  urillm-vision.contract.markpact.md  uriocr.contract.markpact.md  urirdp.contract.markpact.md
urirdp-docker/scripts/: call-http.sh  test-docker.sh  test-local.sh  test-rdp-real.sh  test-real-docker.sh
urirdp-docker/tests/: e2e_rdp_real.sh  test_decide_dispatch.py  test_env_browser_routes.py  test_env_resolve.py  test_rdp_kvm.py
uristepper-docker/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.rpi3.example.yml  docker-compose.yml  pyproject.toml
uristepper-docker/config/: device-profile.json  device-profile.rpi3.example.json
uristepper-docker/docs/: ESP32P4_NOTES.md  ROUTING.md
uristepper-docker/flows/: move-test.uri.flow.yaml  safety-denied.uri.flow.yaml
uristepper-docker/markpacts/: uristepper-docker.bundle.markpact.md  uristepper-python-mock.markpact.md  uristepper-rpi-gpio-python.markpact.md  uristepper.contract.markpact.md
uristepper-docker/scripts/: call-http.sh  test-docker.sh  test-local.sh
uristepper-docker/tests/: e2e.py  test_runtime.py
urisys/: README.md  pyproject.toml
urisys-node/: CHANGELOG.md  README.md  pyproject.toml
urisys-node/config/: node-profile.lenovo.json  nodes.registry.json  route-map.lenovo.yaml
urisys-node/data/: events.jsonl
urisys-node/docker/: Dockerfile.gui  docker-compose.gui.yml
urisys-node/docker/config/: node-profile.docker.json
urisys-node/flows/: bootstrap-kvm-github.uri.flow.yaml
urisys-node/markpacts/: uriscreen.contract.markpact.md  urisys-node.contract.markpact.md
urisys-node/systemd/: urisys-node-user.service
urisys-node/tests/: test_artifact_resolver.py  test_docker_host_e2e.py  test_forward_config.py  test_pack_auto_install.py  test_pack_github.py  test_release_hotload.py  test_uriscreen_auto.py  test_urisys_node.py  test_urisysedge_single_source.py  test_vendored_urisysedge_sync.py
urisys/docs/: CLI.md  MARKPACT.md
urisys/examples/frontend/: app.js  index.html
urisys/examples/markpact/: browser-call.sh
urisys/examples/shell/: server-curl.sh
urisys/flows/: device-maintenance.uri.flow.yaml
urisys/markpacts/packs/: uribrowser.markpact.md  uridom-js.markpact.md  urisystemd.markpact.md
urisys/src/urisys/: defaults.py  flow.py  http_server.py
urisys/src/urisys/controllers/: server_controller.py  uri_controller.py
urisys/src/urisys/managers/: bridge_manager.py  event_manager.py  markpact_manager.py  policy_manager.py  runtime_manager.py
urisys/tests/: test_markpact.py  test_urisys.py
(+371 files in other folders)
