[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urisys"
version = "0.1.11"
description = "URI control system managers/controllers over separate uri* capability packs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["uricore>=0.1.0", "PyYAML>=6.0"]
keywords = ["uri", "control-plane", "controllers", "managers", "devices", "services"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "uricore",
  "uribrowser",
  "uridocker",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]
lab = [
  "uri2flow>=0.1.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "uricore",
  "uribrowser",
  "uridocker",
]
lab = [
  "uri2flow>=0.1.2",
]

[tool.uv.sources]
uricore = { path = "../uricore", editable = true }
uribrowser = { path = "../uri-packs/packages/python/uribrowser", editable = true }
uridocker = { path = "../uri-packs/packages/python/uridocker", editable = true }
uri2flow = { path = "../uri2flow", editable = true }
uri2ops = { path = "../uri2ops", editable = true }
uri3 = { path = "../uri3", editable = true }

[tool.uv]
default-groups = ["dev"]

[project.scripts]
urisys = "urisys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["urisys*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
