[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urisys"
version = "0.1.85"
description = "URI control system managers/controllers over separate uri* capability packs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
dependencies = [
  "PyYAML>=6.0",
  "uricontrol>=0.1.11",
  "uriresolver>=0.1.0",
]
keywords = ["uri", "control-plane", "controllers", "managers", "devices", "services"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "uricontrol",
  "uribrowser",
  "uridocker",
  "goal>=2.1.0",
  "costs>=0.1.20",
]
lab = [
  "urisys-automation-lab[sessions]>=0.1.3",
  "uri2flow>=0.1.2",
]
# Bundled in monorepo until all kvm packs are on PyPI; use [kvm] for local path installs.
real = ["mss>=9.0", "Pillow>=10.0", "pyautogui>=0.9.54", "pytesseract>=0.3.10", "litellm>=1.40"]
kvm = [
  "urikvm[real]>=0.1.0",
  "urihim[real]>=0.1.0",
  "uriocr[real]>=0.1.0",
  "urillm[vision]>=0.1.0",
]
discovery = ["zeroconf>=0.131.0"]
node = ["urisys-node>=0.1.22"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "uricontrol",
  "uribrowser",
  "uridocker",
  "urisys-node",
  "urisys-automation-lab[sessions]",
  "urisys-dev",
]
lab = [
  "urisys-automation-lab[sessions]>=0.1.3",
  "uri2flow>=0.1.2",
]

[tool.uv.sources]
urioperators = { path = "../urioperators", editable = true }
uriguard = { path = "../uriguard", editable = true }
uriresolver = { path = "../uriresolver", editable = true }
uritransport = { path = "../uritransport", editable = true }
urisys-node = { path = "../urisys-node", editable = true }
urikvm = { path = "../urikvm", editable = true }
urihim = { path = "../urihim", editable = true }
uriocr = { path = "../uriocr", editable = true }
urillm = { path = "../urillm", editable = true }
urimail = { path = "../urimail", editable = true }
urioffice = { path = "../urioffice", editable = true }
urivql = { path = "../urivql", editable = true }
uricontrol = { path = "../uricontrol", editable = true }
uribrowser = { path = "../uri-packs/packages/python/uribrowser", editable = true }
uridocker = { path = "../uri-packs/packages/python/uridocker", editable = true }
uri2flow = { path = "../uri2flow", editable = true }
uri2ops = { path = "../uri2ops", editable = true }
uri3 = { path = "../uri3", editable = true }
urisys-automation-lab = { path = "../urisys-automation-lab", editable = true }
urisys-dev = { path = "../urisys-dev", editable = true }

[tool.uv]
default-groups = ["dev"]

[project.scripts]
urisys = "urisys.bootstrap:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["urisys", "urisys.*"]

[tool.pytest.ini_options]
pythonpath = ["src", "../urisys-automation-lab/src", "../urisys-dev/src"]
testpaths = ["tests"]

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true
