[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uribrowser-docker-example"
version = "0.1.0"
description = "Portable browser:// URI example for urisys"
requires-python = ">=3.10"
dependencies = ["uribrowser[real]>=0.1.0"]

[tool.uv.sources]
uribrowser = { path = "../../uribrowser", editable = true }
urisysedge = { path = "../../urisysedge", editable = true }

[project.scripts]
urisys-browser = "uribrowseredge.cli:main"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
