[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urikvm-docker-example"
version = "0.1.0"
description = "Local dev bundle: KVM/HIM/OCR/LLM packs + urikvmedge CLI (NOT published as urikvm on PyPI)"
requires-python = ">=3.10"
dependencies = [
  "urisysedge>=0.1.0",
  "urioperators>=0.1.0",
  "urikvm>=0.1.0",
  "urihim>=0.1.0",
  "uriocr>=0.1.0",
  "urillm[vision]>=0.1.0",
]

[project.optional-dependencies]
real = ["pyautogui>=0.9.54", "mss>=9.0", "pytesseract>=0.3.10", "Pillow>=10.0", "litellm>=1.40"]
vision = ["litellm>=1.40"]

[tool.uv.sources]
urisysedge = { path = "../../urisysedge", editable = true }
urioperators = { path = "../../urioperators", editable = true }
urikvm = { path = "../../urikvm", editable = true }
urihim = { path = "../../urihim", editable = true }
uriocr = { path = "../../uriocr", editable = true }
urillm = { path = "../../urillm", editable = true }

[tool.setuptools]
package-dir = {"" = "packages/python"}

[tool.setuptools.packages.find]
where = ["packages/python"]

[project.scripts]
urisys-kvm = "urikvmedge.cli:main"

[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
