[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urikvm-docker-example"
version = "0.1.0"
description = "Docker glue for urikvm bundle — installs tellmesh sibling packs"
requires-python = ">=3.10"
dependencies = ["urikvmedge[real]>=0.1.0"]

[tool.uv.sources]
urikvmedge = { path = "../../urikvmedge", editable = true }
urisysedge = { path = "../../urisysedge", editable = true }
urioperators = { path = "../../urioperators", editable = true }
urikvm = { path = "../../urikvm", editable = true }
urihim = { path = "../../urihim", editable = true }
uriocr = { path = "../../uriocr", editable = true }
urillm = { path = "../../urillm", editable = true }

[project.scripts]
urisys-kvm = "urikvmedge.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "../..",
  "../../urillm",
  "../../urikvm",
  "../../urihim",
  "../../uriocr",
  "../../urisysedge",
  "../../urikvmedge",
  "../../urimail",
  "../../urioffice",
  "../../urivql",
]
testpaths = ["tests"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
