[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urisys-node"
version = "0.1.3"
description = "Explicitly installed urisys slave node — screen/kvm/him URI server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]
license = "Apache-2.0"
authors = [
  { name = "urisys contributors" },
  { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["uri", "control-plane", "slave", "screen", "kvm", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
real = ["mss>=9.0", "Pillow>=10.0", "pyautogui>=0.9.54", "pytesseract>=0.3.10", "litellm>=1.40"]
discovery = ["zeroconf>=0.131.0"]
dev = [
    "pytest>=8.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "packages/python"}

[tool.setuptools.packages.find]
where = ["packages/python"]

[tool.pytest.ini_options]
pythonpath = ["packages/python"]
testpaths = ["tests"]

[project.scripts]
urisys-node = "urisysnode.cli:main"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
